--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button>Tocar</button>
     </div>
 <!-- Informações dos criadores do projeto -->
-    <footer>Criado pela B7Web e adaptado por Jhonatan Nathanael</footer>
+    <footer>Criado por Jhonatan Andrade</footer>
 <!-- Audios dos toques da bateria -->
     <audio id="s_keyq" src="sounds/keyq.wav"></audio>
     <audio id="s_keyw" src="sounds/keyw.wav"></audio>
